# boosters-tt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  arxiv_papers_table_example.csv  docker-compose-dev.yaml  pyproject.toml
analytics/: generate_reports.py  papers_translation.py
arxiv_scraper/: scrapy.cfg
arxiv_scraper/arxiv_scraper/: middlewares.py  pipelines.py  settings.py
arxiv_scraper/arxiv_scraper/spiders/: arxivspider.py
dags/: arxiv_dag.py
helpers/: db_config.py
